[package]
name = "mdbook-spellcheck"
version = "0.1.0" # don't forget to update `#![doc(html_root_url = "...")]` when bumping this!
authors = ["ISSOtm <eldredhabert0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
anyhow = "1.0.40"
codespan-reporting = "0.11.1"
lazy_static = "1.4.0"
mdbook = "0.4.8"
nlprule = "0.6.4" # Keep this the same as `nlprule-build`!
pulldown-cmark = "0.8.0"
termcolor = "1.1.2"
toml = "0.5.8"

[build-dependencies]
nlprule-build = "0.6.4" # Keep this the same as `nlprule`!
